--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "lint-md ./docs --fix",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
+    "deploy": "bash deploy.sh",
     "commit": "npx git-cz"
   },
   "husky": {
